blocks/v2-product-listing/v2-product-listing.css
.v2-product-listing-container .default-content-wrapper {
  margin-top: 35px;
}

.v2-product-listing__button-list {
  z-index: 2;
  background: var(--c-primary-white);
  width: 100%;
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 8px 8px 0 rgb(0 0 0 / 8%);
  display: none;
}

.v2-product-listing__segment-button {
  background: transparent;
  color: var(--text-color);
  text-transform: capitalize;
  font: var(--body-font-size-xxs)/1.6 var(--ff-body-bold);
  padding: 14px 8px 14px 24px;
  margin: 0;
  text-align: left;
  width: 100%;
}

.v2-product-listing-wrapper {
  --v2-product-listing-content-gap: 12px;

  padding: 0;
}

.v2-product-listing__product {
  display: flex;
  flex-direction: column;
}

.v2-product-listing__product:nth-of-type(odd) {
  background-color: var(--c-tertiary-light-cool-gray);
}

.v2-product-listing__product:nth-of-type(even) {
  background-color: var(--c-secondary-light-gray);
}

.odd-row {
  background-color: var(--c-tertiary-light-cool-gray) !important;
}

.even-row {
  background-color: var(--c-secondary-light-gray) !important;
}

.v2-product-listing__product-image {
  width: 100%;
  position: relative;
}

.v2-product-listing__product-image picture:first-child {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.v2-product-listing__product-image picture:first-child img {
  z-index: 1;
  position: relative;
  top: 0;
  left: 0;
}

.v2-product-listing__product picture:first-child img:hover {
  cursor: pointer;
}

.v2-product-listing__product-image:hover picture:last-child img {
  transition: opacity .2s linear;
}

.v2-product-listing .v2-product-listing__product-image picture:last-child img {
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
}

.v2-product-listing__product-info {
  padding: 24px 16px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: var(--v2-product-listing-content-gap);
  justify-content: center;
}

.v2-product-listing__product-info h2 {
  margin: 0;
  font-size: var(--headline-1-font-size);
  line-height: 1.15;
}

.v2-product-listing__product-info p {
  margin: 0;
}

.v2-product-listing__button-container {
  margin-top: 12px;
  width: 100%;
  display: flex;
  gap: 16px;
}

.v2-product-listing__button-container a.button {
  flex: 0 1 50%;
  margin: 0;
}

.v2-product-listing__button-container .button--primary {
  margin-right: 8px;
}

.v2-product-listing__button-container .button--secondary {
  margin-left: 8px;
}

.v2-product-listing__detail-list,
.v2-product-listing__segment-list {
  list-style: none;
  display: flex;
  text-transform: uppercase;
}

.v2-product-listing__detail-list {
  text-transform: capitalize;
  gap: 12px;
  flex-direction: column;
  align-items: flex-start;
}

.v2-product-listing__segment-list li {
  padding: 0 16px;
  position: relative;
  font-size: var(--superscript-font-size);
  line-height: 1.2;
  letter-spacing: .1em;
}

.v2-product-listing__segment-list li:first-child {
  padding-left: 0;
}

.v2-product-listing__segment-list li::after {
  content: '';
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  width: 1px;
  height: 11px;
  background: var(--c-secondary-steel);
}

.v2-product-listing__detail-list li strong {
  font-family: var(--ff-body-bold);
}

.v2-product-listing--with-dots .v2-product-listing__product-image picture:first-child::before {
  content: '';
  height: 70%;
  max-height: 275px;
  aspect-ratio: 1;
  position: absolute;
  left: 0;
  z-index: 1;
  background: var(--c-primary-gold);
  mask: url('/media/dots.svg');
  transition: background var(--duration-small) var(--easing-standard);
}

.v2-product-listing:not(.v2-product-listing--with-dots) .v2-product-listing__segment-list li:last-child::after {
  display: none;
}

.v2-product-listing__selected-item-wrapper {
  background: none;
  border: 0;
  color: var(--text-color);
  cursor: pointer;
  display: flex;
  margin: 0;
  padding: 14px 24px;
  width: 100%;
  box-shadow: 0 8px 8px 0 rgb(0 0 0 / 8%);
  max-height: 48px;
  align-items: center;
  justify-content: space-between;
}

.v2-product-listing__dropdown--open .v2-product-listing__selected-item-wrapper,
.v2-product-listing__segment-button:hover,
.v2-product-listing__segment-button:focus,
.v2-product-listing__segment-button.active {
  background-color: var(--c-tertiary-light-cool-gray);
}

.v2-product-listing__selected-item {
  text-transform: capitalize;
  font: var(--body-font-size-xxs)/1.6 var(--ff-body-bold);
}

.v2-product-listing__svg-wrapper {
  padding: 16px;
  width: 48px;
  height: 48px;
}

.v2-product-listing__selected-item-wrapper svg {
  --color-icon: var(--c-accent-red);

  width: 16px;
  height: 16px;
  transition: transform var(--duration-small) var(--easing-standard);
}

.v2-product-listing__dropdown--open .v2-product-listing__button-list {
  display: block;
}

.v2-product-listing__dropdown--open .v2-product-listing__selected-item-wrapper svg {
  transform: rotate(180deg);
}

@media (min-width: 600px) {
  .v2-product-listing--with-dots .v2-product-listing__product-image picture:first-child::before {
    margin-left: -25%;
    left: unset;
  }
}

@media (min-width: 744px) {
  .v2-product-listing-wrapper {
    --v2-product-listing-content-gap: 24px;

    margin: auto;
    position: relative;
  }

  .v2-product-listing__product {
    height: 400px;
    display: flex;
    flex-direction: row;
    max-width: 1440px;
    margin: auto;
    padding: 0;
  }

  .v2-product-listing .v2-product-listing__product:first-of-type {
    padding-top: 0;
  }

  .v2-product-listing__product-info > p {
    letter-spacing: .01em;
    text-wrap: balance;
  }

  .v2-product-listing-container h1 + p {
    margin-bottom: 50px;
  }

  .v2-product-listing__product-image {
    flex: 0.5 1 50%;
  }

  .v2-product-listing__product-image picture:first-child {
    width: 100%;
    height: 100%;
  }

  .v2-product-listing .v2-product-listing__product-image picture:last-child {
    display: flex;
    justify-content: center;
    overflow: hidden;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
  }

  .v2-product-listing__product-image picture:first-child img,
  .v2-product-listing__product-image picture:last-child img {
    margin: 0;
  }

  .v2-product-listing__button-list {
    position: relative;
    display: flex;
    align-items: center;
    max-width: 1040px;
    margin: auto;
    box-shadow: none;
    justify-content: space-between;
  }

  .v2-product-listing__segment-button {
    height: 100%;
    text-align: center;
    padding: 14px 0;
    position: relative;
  }

  .v2-product-listing__segment-button::after {
    bottom: 0;
    content: '';
    display: block;
    height: 4px;
    position: absolute;
    transition: background-color var(--duration-small) var(--easing-standard);
    width: 100%;
  }

  .v2-product-listing__segment-button.active::after,
  .v2-product-listing__segment-button:hover::after,
  .v2-product-listing__segment-button:focus::after {
    background-color: var(--c-accent-red);
  }

  .v2-product-listing__segment-button:hover,
  .v2-product-listing__segment-button:focus,
  .v2-product-listing__segment-button.active {
    background-color: transparent;
  }

  .v2-product-listing__product-info {
    flex: 0.5 1 50%;
    padding: 0 16px 0 32px;
    align-content: center;
  }

  .v2-product-listing__detail-list li {
    font-size: var(--body-1-font-size);
    line-height: var(--body-1-line-height);
  }

  .v2-product-listing__button-container a.button {
    flex-basis: 0;
  }

  .v2-product-listing__selected-item-wrapper {
    display: none;
  }

  .v2-product-listing__dropdown {
    padding: 10px 16px;
    border-top: 1px solid var(--c-secondary-silver);
    border-bottom: 1px solid var(--c-secondary-silver);
  }
}

@media (min-width: 1200px) {
  .v2-product-listing--with-dots .v2-product-listing__product-image picture:first-child::before {
    margin-left: unset;
  }

  .v2-product-listing .v2-product-listing__product:has(.v2-product-listing__product-image-link:hover),
  .v2-product-listing .v2-product-listing__product:has(.button--primary:hover),
  .v2-product-listing--with-dots .v2-product-listing__product-image--show-background picture:first-child::before,
  .v2-product-listing--with-dots .v2-product-listing__product-image:hover picture:first-child::before {
    background-color: var(--c-primary-white);
  }

  .v2-product-listing__product-image {
    flex: 0 1 800px;
  }

  .v2-product-listing__product-info {
    flex: 0 1 calc(100% - 800px);
    padding-left: 88px;
  }

  .v2-product-listing .v2-product-listing__product-image--show-background picture:last-child img,
  .v2-product-listing .v2-product-listing__product-image:hover picture:last-child img {
    position: relative;
    opacity: 1;
    transition: opacity .2s linear;
    flex: 1;
  }

  .v2-product-listing__product-info > p {
    max-width: 320px;
  }
}

